Add Firebase and basic project rendering code

--- a/portfolio/.sassrc
+++ b/portfolio/.sassrc
@@ -1,4 +1,4 @@
 {
-  "data": "@import \"src/assets/variables\";",
+  "data": "@import \"src/assets/style/variables\";",
   "includePaths": ["node_modules"]
 }
