--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,9 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "bulma": "^0.9.1"
+    "bulma": "^0.9.1",
+    "fb": "^2.0.0",
+    "firebase": "^7.23.0",
+    "firebaseui": "^4.6.1"
   }
 }
