--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.1",
     "fb": "^2.0.0",
     "firebase": "^7.23.0",
