Add Pell editor

--- a/portfolio/.eslintrc
+++ b/portfolio/.eslintrc
@@ -32,6 +32,7 @@
     "no-useless-constructor": "off",
     "no-plusplus": "off",
     "no-console": "off",
+    "no-new": "off",
     "max-classes-per-file": "off",
     "import/extensions": "off",
     "import/no-extraneous-dependencies": "off",
