--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,6 +8,7 @@
   "author": "Eirik Fossestøl Andresen <eiriand03@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/pell": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
@@ -22,8 +23,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.1",
-    "fb": "^2.0.0",
     "firebase": "^7.23.0",
-    "firebaseui": "^4.6.1"
+    "firebaseui": "^4.6.1",
+    "pell": "^1.0.6"
   }
 }
