Refactor index page to use OO principles

--- a/portfolio/.eslintrc
+++ b/portfolio/.eslintrc
@@ -128,7 +128,7 @@
       "error",
       "never"
     ],
-    "space-before-function-paren": [
+    "@typescript-eslint/space-before-function-paren": [
       "error",
       "always"
     ],
