--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Eirik Fossestøl Andresen <eiriand03@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/pell": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
@@ -26,6 +25,7 @@
     "bulma": "^0.9.1",
     "firebase": "^7.23.0",
     "firebaseui": "^4.6.1",
-    "pell": "^1.0.6"
+    "pell": "^1.0.6",
+    "tinymce": "^5.5.1"
   }
 }
