--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "rimraf dist && parcel build src/index.html"
   },
   "author": "Eirik Fossestøl Andresen <eiriand03@gmail.com>",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.11",
     "typescript": "^4.0.3"
   },
